--- a/stilo.css
+++ b/stilo.css
@@ -23,7 +23,7 @@ h2{
 	text-align : center;
 	margin: 0;
 	font-size: 20px;
-	margin-bottom: 20px;
+	margin-bottom: 20px;/*margen inferior*/
 }
 input, textarea{
 
@@ -36,9 +36,9 @@ input, textarea{
     font-size: 16px
 }
 textarea{
-	min-height: 100px;
-	max-height: 200px;
-	max-width: 100%;
+	min-height: 100px;/*altura minima*/
+	max-height: 200px;/*altura maxima*/
+	max-width: 100%; /*anchi*/
     font-family: sans-serif;
 
 }
